2004-11-11 Alain Magloire
	Fix for PR 75000, from PalmSource
	* cdi/org/eclipse/cdt/debug/core/cdi/model/Variable.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/VariableDescriptor.java
	* mi/org/eclipse/cdt/debug/mi/core/command/MIVarInfoType.java

2004-11-10 Alain Magloire
	Fix for PR 51113 and PR 66268
	It allow more flexibility in the GDB console, for example
	when gdb require interactive questions.

	* mi/org/eclipse/cdt/debug/mi/core/CLIProcessor.java
	* mi/org/eclipse/cdt/debug/mi/core/MISession.java
	* mi/org/eclipse/cdt/debug/mi/core/RxThread.java
	* mi/org/eclipse/cdt/debug/mi/core/SessionProcess.java
	* mi/org/eclipse/cdt/debug/mi/core/TxThread.java
	* mi/org/eclipse/cdt/debug/core/command/MIGDBShowPrompt.java
	* mi/org/eclipse/cdt/debug/core/command/RawCommand.java
	* mi/org/eclipse/cdt/debug/core/output/MIOutput.java
	* mi/org/eclipse/cdt/debug/core/output/MIParser.java

2004-11-09 Alain Magloire
	Throw not implemented exception for exception breakpoint

2004-11-09 Alain Magloire
	Reverting the changes below, for PR 74496. After exchanging with
	the Palm folks, it was not fixing the problem.
	This PR can not be fix for CDT-2.1 moving
	it to 3.0 where we should have enough framework	for a better fix.

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/EventManager.java

2004-11-08 Alain Magloire
	Fix for 74496 ; we should destroy the global
	variables if they are in the address range of a
	shared library being unloaded.

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/EventManager.java

2004-11-08 Mikhail Khodjaiants
	Added support for refresh preferences and properties.
	* IMIConstants.java
	* MIPlugin.java
	* MIPreferenceInitializer.java: new
	* RegisterManager.java
	* SharedLibraryManager.java
	* plugin.xml

2004-11-08 Alain Magloire
	Implement new Interface ICDIFunctionFinished.
	It returns the return value of the function.
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/FunctionFinished.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/event/SuspendedEvent.java